# healthcare-data-warehouse-bi

./: .env  .gitignore  README.md  drop_databases.py  init.py  init.sh  install_sid.py  launch_load_sid.py  mpd.md  pat_token  pyproject.toml  rsa_key.p8  rsa_key.pub  rsa_key_encrypted.der  run_all_by_date.py  run_insert_stg_to_wrk.py
Inputs_Projets_NF26_AI07/: .~lock.Hopital CI VF.xlsx#  .~lock.Hopital Mapping VF.xlsx#
Rapport/: Dashboard.pbix
airflow/: airflow.cfg  airflow.db  simple_auth_manager_passwords.json.generated
airflow/dags/: install_sid.py  launch_load_sid.py  test.py
airflow/dags/scripts/: create_SOC.sql  create_WRK.sql  create_database.sql  insert_STG_procedures.sql  insert__STG__to__WRK_STG.sql  insert__WRK_SOC__to__SOC.sql
airflow/scripts/: insert__WRK_STG__to__WRK_SOC.sql
scripts/: create_SOC.sql  create_STG.sql  create_TCH.sql  create_WRK.sql  create_database.sql  drop_databases.sql  init.sh  insert_STG_procedures.sql  insert__STG__to__WRK_STG.sql  insert__WRK_SOC__to__SOC.sql  insert__WRK_STG__to__WRK_SOC.sql  install_sid.py  launch_load_sid.py  run_all_by_date.py  test_example.py
