[project]
name = "projet2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow>=3.0.1",
    "apache-airflow-providers-snowflake>=6.3.1",
    "dotenv>=0.9.9",
    "snowflake>=1.5.1",
    "snowflake-connector-python>=3.15.0",
]
