[project]
name = "projet2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow>=2.10.0",
    "apache-airflow-providers-snowflake>=6.3.1",
    "python-dotenv>=1.0.0",
    "pendulum>=3.1.0",
    "flask-appbuilder",
    "pyarrow<19.0.0",
    "aiohttp>=3.12.12",
]
